Modifying and fixing some files

--- a/content/docs/Change-Log.mdx
+++ b/content/docs/Change-Log.mdx
@@ -333,5 +333,5 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ---
 
-For a complete list of changes, please refer to the [GitHub repository](https://github.com/zenith-79/apexify.js).
+For a complete list of changes, please refer to the [GitHub repository](https://github.com/EIAS79/apexify.js).
 
