--- a/content/docs/Getting-Started.mdx
+++ b/content/docs/Getting-Started.mdx
@@ -401,12 +401,12 @@ Now that you understand what Apexify.js can do, check out the [Background Docume
 
 Need help? Join our community:
 
-- **Discord**: [Jedi Studio](https://discord.gg/CS2NRSPyze) | [FresedGPT](https://discord.gg/94qUZWhwFE) | [ElectronHub](https://discord.gg/83XcjD8vgW)
-- **Documentation**: [Full API Reference](http://apexifyjs.jedi-studio.com)
-- **Support Server**: [Discord Support](https://discord.gg/mDyXV9hzXw)
+- **Discord**: [DM Me](https://discord.com/users/1130583393176920095) | [Jedi Studio](https://discord.gg/CS2NRSPyze) | [Ethical Programming](https://discord.gg/ethical-programmer-s-1188398653530984539)
+- **Documentation**: [Full API Reference](http://apexify.js.com)
+- **Support Server**: [Discord Support](https://discord.gg/soon_coming_apexify.js)
 
 ---
 
-**Made with ❤️ by [Jedi Studio](https://discord.gg/CS2NRSPyze)**
+**Made with ❤️ by zenith-79**
 
 *Create stunning visuals with Apexify.js - The ultimate canvas library for Node.js*
