--- a/content/docs/Text/advanced-text-features.mdx
+++ b/content/docs/Text/advanced-text-features.mdx
@@ -386,7 +386,7 @@ const final = await painter.createText([
   },
   // Footer text
   {
-    text: 'Made with ❤️ by Jedi Studio',
+    text: 'Made with ❤️ by zenith-79',
     x: 600,
     y: 700,
     fontSize: 18,
@@ -514,7 +514,7 @@ async function createCompleteComposition() {
     },
     // Footer text
     {
-      text: 'Made with ❤️ by Jedi Studio',
+      text: 'Made with ❤️ by zenith-79',
       x: 600,
       y: 700,
       fontSize: 18,
